# voltcraft-power-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md
voltcraft_sem/: __init__.py  cli.py  config.py  db.py  device.py  discovery.py  protocol.py  server.py
voltcraft_sem/web/: app.js  index.html  style.css
